Bug 331117 - Layout module shold not shut down until all documents/windows have been released, r+sr=dbaron